[gd_scene load_steps=11 format=3 uid="uid://blg5uykh11hdt"]

[ext_resource type="Texture2D" uid="uid://ddutf7nnbm571" path="res://assets/styled_sky.hdr" id="1_7nt82"]
[ext_resource type="Script" path="res://main.gd" id="1_gcq8x"]
[ext_resource type="PackedScene" uid="uid://ccni3hfc3p863" path="res://plane.tscn" id="1_lqn53"]
[ext_resource type="PackedScene" uid="uid://cpx6dqp6yhxqk" path="res://chunk.tscn" id="2_vs4x6"]
[ext_resource type="Script" path="res://Camera3D.gd" id="3_5j71x"]
[ext_resource type="PackedScene" uid="uid://dxeb65qfn8di" path="res://ui.tscn" id="6_vwxa6"]
[ext_resource type="AudioStream" uid="uid://dr70o3k2ejsii" path="res://assets/audio/Riverside Ride Short Loop.wav" id="7_yaoyf"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_p5biu"]
panorama = ExtResource("1_7nt82")

[sub_resource type="Sky" id="Sky_akr7w"]
sky_material = SubResource("PanoramaSkyMaterial_p5biu")

[sub_resource type="Environment" id="Environment_u8gas"]
background_mode = 2
sky = SubResource("Sky_akr7w")
tonemap_mode = 2
glow_enabled = true

[node name="Main" type="Node3D"]
script = ExtResource("1_gcq8x")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_u8gas")

[node name="Plane" parent="." instance=ExtResource("1_lqn53")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 10, 2.08165e-12)

[node name="Chunk" parent="." instance=ExtResource("2_vs4x6")]

[node name="Camera3D" type="Camera3D" parent="."]
script = ExtResource("3_5j71x")
target_path = NodePath("../Plane")
offset = Vector3(7, 7, 15)

[node name="UI" parent="." instance=ExtResource("6_vwxa6")]

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_yaoyf")
volume_db = -15.0
autoplay = true

[connection signal="dead" from="Plane" to="." method="_on_plane_dead"]
[connection signal="fuel_changed" from="Plane" to="UI" method="update_fuel"]
[connection signal="score_changed" from="Plane" to="UI" method="update_score"]
